# genome

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
conda/: conda_build_config.yaml  environment.yml
conda/recipe/: bld.bat  build.sh  meta.yaml
genomeblocks/: __init__.py  architecture.py  genes.py  loci.py  locus.py  signal.py  tags.py
src/genome/: __init__.py  architecture.py  features.py  genes.py  motifs.py  signal.py
src/genome.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
