[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genome"
version = "v0.0.1"
description = "Fluent building blocks for regulatory genomics."
readme = "README.md"
authors = [ { name = "Umut Berkay Altintas", email = "umutberkayaltintas@gmail.com" } ]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

keywords = ["genomics", "loci", "genome", "graph", "architecture"]

# Minimal dependency suggestions based on imports in the code.
dependencies = [
    "cgranges",
    "pyranges",
    "tqdm",
    "numpy",
    "pandas",
    "scipy",
    "pyBigWig",
    "matplotlib",
    "cooler",
    "graph-tool",
    "lightmotif",
]