[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genomeblocks"
version = "1.0.0"
description = "Fluent building blocks for regulatory genomics."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    {name = "Umut Berkay Altintas"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "pybigwig",
    "cooler",
    "pyranges",
    "tqdm",
    "cgranges",
    "lightmotif"
]

[tool.setuptools.packages.find]
include = ["genomeblocks*"]
